Insta API - pk 정보까지만 API로 만들기

--- a/58_API(1).md
+++ b/58_API(1).md
@@ -24,7 +24,7 @@ post 앱을 생성한다.
 
 > post/models.py
 
-```
+```python
 class Post(models.Model):
 	author = models.ForeignKey(Settings.AUTH_USER_MODEL)
 	created_date = models.DateTimeField(auto_now_add=True)
@@ -94,7 +94,7 @@ request.Post로 전달된 author_id를 받아 새 Post를 생성한다.
 
 > model/views.py
 
-```
+```python
 User = get_user_model()
 
 @csrf_exempt    #API로 요청할 때 csrf 해제, 누구나 접근 가능한 상태.
@@ -205,7 +205,7 @@ post id, photo를 받아서 PostPhoto 객체를 생성한다. 이후 post_id와 
 
 > post/views.py
 
-```
+```python
 @csrf_exempt
 def post_photo_add(request):
     if request.method == 'POST':
@@ -246,4 +246,60 @@ postman에서 테스트 해본다.
 view에서 필요한 데이터는 post_id와 photo다. postman에서 Body탭에서 해당 데이터를 설정해준다. 여기서 photo는 우측에 `Text`버튼을 누르면 `File`로 변경할 수 있다. `File`모드에서 원하는 이미지를 로드하고 Send하면 하단과 같이 1번 Post의 photolist를 출력한다. (현재는 Send를 두번 누른 상태라서 1,2가 출력되었다.)
 
 현재 상태에서는 이미지를 추가하면 의도치 않은 경로로 저장될 것이다. settings.py에서 MEDIA관련 설정을 해주도록 한다.
+
+---
+
+### 딕셔너리 형태의 API
+
+전체 Post를 딕셔너리 형태로 반환해주는 작업을 한다. 우선 post list 정보를 불러오는 뷰를 생성한다. 
+
+> post/views.py
+
+```python
+def post_list(request):
+	post_list = Post.objects.all()
+	context = {
+		'post_list': post_list,
+	}
+	return JsonResponse(data=context)
+```
+
+post의 전체 내용을 읽어서 Json형태로 변환하여 반환해주는 시나리오가 자동적으로 되면 좋겠지만 그렇게 되지 않는다. **인스턴스 자체를 바로 Json형태로 만들어주는 것이 불가능하다.** 따라서 다음과 같이 인스턴스를 딕셔너리 형태로 만들어줘야 한다. 
+
+```python
+def post_list(request):
+    post_list = Post.objects.all()
+    post_dict_list = []
+    for post in post_list:
+        cur_post_dict = {
+            'pk': post.pk,
+            'author': post.author.pk,
+        }
+        post_dict_list.append(cur_post_dict)
+    context = {
+        'post_list': post_dict_list,
+    }
+    return JsonResponse(data=context)
+```
+
+Post의 모든 객체를 순회하면서 각 post와 post의 author의 pk를 딕셔너리 형태로 저장한다. 그리고 이 딕셔너리를 리스트에 추가한다. 딕셔너리 데이터들이 추가된 리스트를 context로 실어서 보낸다.
+
+url을 지정한 뒤 postman에서 테스트 해보자.
+
+> post/urls.py
+
+```
+url(r'^$', views.post_list, name='list'),
+```
+
+![0317-3](./images/0317-3.png)
+
+/post/에 GET방식으로 요청한다. 사진의 아래부분을 보면 딕셔너리 형태로 pk들이 나열된 것을 확인할 수 있다. 현재 post가 3개 존재하기 때문에 3개의 데이터가 출력되었다.
+
+
+
+
+
+
+
 
