--- a/58_API(1).md
+++ b/58_API(1).md
@@ -296,9 +296,30 @@ url(r'^$', views.post_list, name='list'),
 
 /post/에 GET방식으로 요청한다. 사진의 아래부분을 보면 딕셔너리 형태로 pk들이 나열된 것을 확인할 수 있다. 현재 post가 3개 존재하기 때문에 3개의 데이터가 출력되었다.
 
+---
 
+author만 살펴보자. API를 요청했는데 작성자의 이름도 아닌 아이디만 반환된다면 사실상 사용할 수 없는 데이터를 받은 셈이다. author의 정보를 추가해보자.
 
+```python
+def post_list(request):
+    post_list = Post.objects.select_related('author')
+    post_dict_list = []
+    for post in post_list:
+        cur_post_dict = {
+            'pk': post.pk,
+            'author': {
+                'pk': post.author.pk,
+                'username': post.author.username,
+            },
+        }
+        ...
+```
 
+현재 각 post에 대해서 author라는 foreign key값을 계속 쓰고 있기 때문에 효율성을 위해 post_list의 쿼리셋도 변경했다.
+
+postman에서 /post/로 요청한 결과값은 다음과 같이 author의 이름도 포함된 것을 확인할 수 있다.
+
+![0317-4](./images/0317-4.png)
 
 
 
