Insta API - post list API 구현 추가

--- a/58_API(1).md
+++ b/58_API(1).md
@@ -321,6 +321,51 @@ postman에서 /post/로 요청한 결과값은 다음과 같이 author의 이름
 
 ![0317-4](./images/0317-4.png)
 
+---
+
+photo를 추가해보자. 작업의 흐름은 다음과 같다. 
+
+전체 post를 순회하는 동안 각 post마다 pk, photo, author 내용을 추가한다. 이 때 photo는 여러개가 나올 수 있으므로 photo에 대해서는 다시 순회하여 리스트로 저장한다.
+
+```python
+def post_list(request):
+    post_list = Post.objects.select_related('author')
+    post_dict_list = []
+    
+    # 전체 Post를 loop
+    for post in post_list:
+    
+    	 # 현재 post에 해당하는 PostPhoto 리스트
+        cur_post_photo_list = post.postphoto_set.all()
+        
+        # 현재 post에 해당하는 PostPhoto들을 쿼리에서 dict 형식으로 바꾼 리스트 생성
+        cur_post_photo_dict_list = []
+        for post_photo in cur_post_photo_list:
+            cur_post_photo_dict = {
+                'pk': post_photo.pk,
+                'photo': post_photo.photo.url,
+            }
+            cur_post_photo_dict_list.append(cur_post_photo_dict)
+        cur_post_dict = {
+            'pk': post.pk,
+            'photo_list': cur_post_photo_dict_list,
+            'author': {
+                'pk': post.author.pk,
+                'username': post.author.username,
+            },
+        }
+        post_dict_list.append(cur_post_dict)
+    context = {
+        'post_list': post_dict_list,
+    }
+    return JsonResponse(data=context)
+```
+
+/post/ 에 대해 API를 다시 요청하면 다음과 같이 각 photo에 대한 정보가 추가된 것을 볼 수 있다.
+
+![0317-5](./images/0317-5.png)
+
+
 
 
 
