--- a/58_API(1).md
+++ b/58_API(1).md
@@ -365,7 +365,50 @@ def post_list(request):
 
 ![0317-5](./images/0317-5.png)
 
+---
 
+위에서는 리스트 전체를 보여주는 API를 작성했다. post를 새로 생성했을 때 생성된 정보만 보여주는 API를 작성해보자. 뷰에서 작성하면 같은 내용을 또 써야하기 때문에 모델에서 처리한다.
+
+> post/models.py
+
+Post모델에 to_dict 메소드를 추가한다.
+
+```python
+def to_dict(self):
+    return {
+        'pk': self.pk,
+        'created_date': self.created_date,
+        'author': self.author.pk,
+        'photo_list': [photo.to_dict() for photo in self.postphoto_set.all()]
+    }
+```
+
+PostPhoto모델에도 to_dict 메소드를 추가한다.
+
+```python
+def to_dict(self):
+    return {
+        'pk': self.pk,
+        'photo': self.photo.url,
+    }
+```
+
+PostPhoto의 to_dict는  특정 photo 정보에 대해서 pk, url을 내보내준다. 
+
+Post는 특정 post의 정보를 위에서 정한 것처럼 반환하는데 photo_list의 값으로 PostPhoto의 to_dict 반환값을 사용한다. 앞의 view에서 다룬 내용을 같은 개념으로 모델의 메소드로 정의한 것이다. 이런 설정이 있으면 view는 간단해진다.
+
+> post/views.py
+
+```
+def post_list(request):
+	context = {
+        'post_list': [post.to_dict() for post in Post.objects.all()],
+    }
+    return JsonResponse(data=context)
+```
+리스트가 생성되면서 각 포스트에 대해서 to_dict 메소드의 결과값이 들어가게 된다. 이전에 길게 작성했던 코드가 몇줄로 해결된다.
+
+author정보도 member의 MyUser모델에서 to_dict 메소드로 처리해서 필요한 내용을 더 가져올 수 있다.
 
 
 
