59 - post_create 테스트 코드 작성

--- a/59_API(2).md
+++ b/59_API(2).md
@@ -12,7 +12,10 @@ post 앱에서 tests 패키지를 생성한다.
 
 ```python
 class PostTest(APILiveServerTestCase):
-	def test_create_post(self):
+	def test_post_create(self):
+		...
+		
+	def test_cannot_post_create_not_authenticated(self):
 		...
 	
 	def test_post_list(self):
@@ -33,6 +36,8 @@ class PostTest(APILiveServerTestCase):
 
 우선 테스트 코드의 메소드 이름을 위와같이 작성하고 각각의 동작을 구현한다. 그리고 그 동작에 기반하여 실행코드를 작성한다. (TDD)
 
+---
+
 ### 헬퍼메소드 create_user 
 
 유저 생성하는 루틴은 거의 모든 테스트 코드에서 사용될 에정이기 떄문에 헬퍼함수로 따로 구현한다. 이후에 유저 생성 후 로그인 하는 코드도 생성할 것이다.
@@ -43,7 +48,7 @@ class PostTest(APILiveServerTestCase):
 	test_password = 'test_password'
 	
 	def create_user(self):
-		user = User.objects.create_user(
+		user = User.objects.create_user(  
 			username=self.test_username,
 			password=self.test_password,
 		)
@@ -53,6 +58,71 @@ class PostTest(APILiveServerTestCase):
 	...
 ```
 
+---
+
+### 테스트 코드
+
+
+로그인 하지 않아도 작성할 수 있는 테스트는 test_cannot_post_create_not_authenticated이다. 사용자 인증이 되지 않은 상태로는 포스트를 생성할 수 없어야 한다.
+
+```python
+def test_cannot_post_create_not_authenticated(self):
+	url = reverse('post-create')
+	response = self.client.post(url)
+	self.assertEqual(response.status_code, status.HTTP_403_FORBIDDEN)
+```
+
+유저 인증이 되지 않은 상태에서 post를 생성하려고 할 때 403에러를 발생시켜야 한다 .
+
+지금 테스트를 해보면 reverse에서 'post-create'에 매칭되지 않는다는 에러가 발생한다 . rest framework에서는 `_`대신 `-`을 사용하기 때문에 최대한 맞춰주도록 한다.
+
+post/urls.py에서 app_name을 제거하고 create 부분의 name을 `'post-create'`로 수정한다. (app_name을 사용하지 않는 것은 restframework를 쓴다는 전제에 의한 것이다.)
+
+이제 테스트를 하면 200 != 403이라는 에러가 발생한다. 현재 author_id를 넘기지 않은 상태이기 때문에 KeyError로 빠지지만 코드가 없기 때문에 200으로 반환되었다. KeyError에서 문자열만 반환하지 말고, status=403을 추가한다.
+
+테스트 하고 나서 만들어지지 않은 상태를 체크해야 하기 때문에 다음 코드를 추가한다. 
+
+```python
+self.assertEqual(Post.objects.exists(), False)
+```
+
+Post에 객체가 하나도 없으면 통과되는 루틴이다. 
+
+---
+
+이번에는 post_create에 대한 테스트 코드를 작성해보자. 
+
+```python
+def test_post_create(self):
+	user = self.create_user()
+	self.client.login(
+		username=self.test_username,
+		password=self.test_password,
+	)
+	url = reverse('post-create')
+	response = self.client.post(url)
+	
+	self.assertEqual(response.status_code, status.HTTP_201_CREATED)
+	self.assertEqual(Post.objects.count(), 1)
+	post = Post.objects.first()
+	self.assertEqual(post.author.id, user.id)
+```
+
+1. 유저 생성, 유저 로그인     
+2. post-create의 API 주소값을 가져온다.     
+3. 해당 API 주소에 post요청을 보내서 response를 받는다.   
+4. 응답이 201인지, 1개만 만들어졌는지, 만들어진 post의 작성자 id가 현재 유저의 id와 같은지 체크한다.   
+
+현재는 테스트가 제대로 돌아가지 않을 것이다. 테스트에 따른 실행 코드를 작성해야 한다.
 
 
 
+
+
+
+
+
+
+
+
+ 
