59 패키지 관리 추가

--- a/59_API(2).md
+++ b/59_API(2).md
@@ -115,6 +115,62 @@ def test_post_create(self):
 
 현재는 테스트가 제대로 돌아가지 않을 것이다. 테스트에 따른 실행 코드를 작성해야 한다.
 
+---
+
+### 패키지 관리
+
+뷰로 예를 들면, 현재는 rest_framework에 대한 뷰만 존재하기 때문에 혼동되지 않을 수 있으나 나중에 django 내장 뷰도 사용하게 되면 구분지을 필요가 발생한다. 하나의 패키지 안에 여러 모듈을  두어 관리를 편하게 한다. 
+
+post앱에 apis라는 패키지를 따로 생성한다. 여기서 API에 관련된 뷰를 담당할 것이다. 
+
+views 패키지를 생성하고  `__init__.py`에 기존의 views.py 내용을 복사한다. 그리고 apis 패키지에는 rest framework 뷰를 작성한다.
+
+> post/apis/__init__.py
+
+```python
+class PostList(generics.ListCreateAPIView):
+	queryset = Post.objects.all()
+	serializer_class = None
+```
+
+urls 패키지를 생성한다. 기존의 urls.py 이름을 views.py로 바꾸고 urls 패키지에 넣는다 .urls에서 모든 urls을 관리할 것인데 views.py는 일반뷰에 대한 url을 담당하게 된다. apis.py를 생성하고 이후에 API관련 뷰를 여기서 담당할 것이다. 
+
+> post/urls/apis.py
+
+```python
+from .. import apis as views
+
+urlpatterns = [
+	url(r'^$', views.PostList.as_view(), name='post-list'),
+]
+```
+
+API뷰를 하나 만들고 이 뷰에 대해 url을 설정했다.
+
+메인 url도 일반 뷰에 대한 url만 동작하기 때문에 API에 대한 url도 따로 작성한다.
+
+> urls.py
+
+```python
+from post.urls import views as post_urls
+from post.urls import apis as post_apis_urls
+
+api_urlpatterns = [
+	url(r'^post/', include(post_apis_urls)),
+]
+
+urlpatterns = [
+	url(r'^admin/', admin.site.urls),
+	url(r'^post/', include(post_urls)),
+	url(r'^api/', include(api_urlpatterns, namespace='api')),
+]
+```
+post_urls은 일반뷰에 대한 url, post_apis_urls는 API뷰의 url을 담당한다. 그리고 urlpatterns에 api_urlpatterns 내용을 추가한다.
+
+
+
+
+
 
 
 
