59 - test api url exist 추가

--- a/59_API(2).md
+++ b/59_API(2).md
@@ -167,13 +167,22 @@ urlpatterns = [
 ```
 post_urls은 일반뷰에 대한 url, post_apis_urls는 API뷰의 url을 담당한다. 그리고 urlpatterns에 api_urlpatterns 내용을 추가한다.
 
+---
 
+api url 요청시 기대하는 값을 테스트 코드로 구현해본다.
 
+```python
+def test_api_url_exist(self):
+	try:
+		url = reverse('api:post-list')
+		url = reverse('api:post-detail')
+	except NoReverseMatch as e:
+		self.fail(e)
+```
 
+이런식으로 해당 url에 reverse 함수에 의해 잘 가져올 수 있는지 체크한다. 현재 detail 은 생성하지 않았기 때문에 에러가 발생한다. 
 
-
-
-
+PostDetail을 
 
 
 
