59 - post detail api view 추가

--- a/59_API(2).md
+++ b/59_API(2).md
@@ -174,15 +174,32 @@ api url 요청시 기대하는 값을 테스트 코드로 구현해본다.
 ```python
 def test_api_url_exist(self):
 	try:
-		url = reverse('api:post-list')
-		url = reverse('api:post-detail')
+		resolve('/api/post/')
+		resolve('/api/post/1/')
 	except NoReverseMatch as e:
 		self.fail(e)
 ```
 
-이런식으로 해당 url에 reverse 함수에 의해 잘 가져올 수 있는지 체크한다. 현재 detail 은 생성하지 않았기 때문에 에러가 발생한다. 
+resolve 함수를 이용하여 해당 url에 연결된 뷰가 존재하는지 체크한다. 현재 /api/post/1은 detail view를 생성하지 않았기 때문에 에러가 발생한다. 
 
-PostDetail을 
+PostDetail을 작성하고 url을 연결한다.
+
+> post/apis
+
+```python
+class PostDetail(generics.RetrieveUpdateDestroyAPIView):
+	queryset = Post.objects.all()
+	serializer_class = None
+```
+
+> post/urls/apis.py
+
+```python
+url(r'^(?P<pk>[0-9]+)/$', views.PostDetail.as_view(), name='post-detail'),
+```
+
+테스트!
+
 
 
 
