발표 내용 추가

--- a/발표용.md
+++ b/발표용.md
@@ -90,6 +90,8 @@
 4. email로 특정 링크(API?)를 보내서 해당 email에 대한 인증을 할 수 있나요?
 5. API - 강의정보에 강의내용, 수강생리스트, 문의, 평점 등 모든 데이터를 API로 보내도 되는지. 아니면 따로 API로 구현
 
+![api-0](https://s7.postimg.org/jg2f96u5n/Screen_Shot_2017-03-24_at_1.29.18_PM.png)
+
 ![api-1](https://s27.postimg.org/ehth3r3tv/Screen_Shot_2017-03-24_at_11.25.28_AM.png)
 
 ![api-2](https://s27.postimg.org/rn8z9uxpf/Screen_Shot_2017-03-24_at_11.25.41_AM.png)
