발표 내용 수정 - 추가기능

--- a/발표용.md
+++ b/발표용.md
@@ -43,10 +43,14 @@
 - 강의등록
 - 강의신청
 
-### 추가기능: 평가
-- 평점관리
-- 리뷰
-- 문의하기
+### 추가기능: 평가, 찜하기
+- 평가 
+	- 평점관리
+	- 리뷰
+	- 문의하기
+- 찜하기
+
+---
 
 세 달을 모두!
 
