--- a/발표용.md
+++ b/발표용.md
@@ -57,7 +57,7 @@
 ![img3](https://s1.postimg.org/j1cjipue7/Screen_Shot_2017_03_23_at_10_45_50_PM.png)
 
 - Django 기반 백엔드 개발 / 관리자 페이지 / 배포 / 데이터관리 / 협업 ...
-- :heavy_check_mark: **`Front-End - Bootstrap`** 
+- :heavy_check_mark: **Front-End - Bootstrap** 
 
 ---
 
