--- a/발표용.md
+++ b/발표용.md
@@ -9,6 +9,8 @@
 1. 프로젝트
 2. 핵심기능
 3. 스프린트
+4. 역할분담
+5. QnA
 
 ---
 
@@ -33,6 +35,8 @@
 ---
 
 ## 2. 핵심기능
+![func](https://s23.postimg.org/r3qcbcrvv/upload_3_15_2017_at_8_16_43__PM.png)
+
 ### 유저
 - 회원가입
 - 로그인 / 로그아웃
