--- a/발표용.md
+++ b/발표용.md
@@ -10,7 +10,7 @@
 2. 핵심기능
 3. 스프린트
 4. [역할분담](#역할분담)
-5. QnA
+5. [QnA](#qna)
 
 ---
 
@@ -80,7 +80,7 @@
 
 ---
 
-## 4. 역할분담
+## 역할분담
 
 전담 X
 
@@ -90,7 +90,7 @@
   
 ---
 
-## 5. QnA
+## QnA
 
 1. 스프린트가 적절히 나누어졌나요?
 2. 역할분담 하는게 나을까요? 
